gcc/testsuite/algol68/compile/error-widening-7.a68
# { dg-options "-fstropping=upper" }  #

BEGIN
   LONG REAL d := 3.14; # { dg-error "coerced" }  #
   d
END
